# oauth2-authorization-server

./: .gitignore  README.md
backend/: main.py  requirements.txt  response.py  utils.py
oauth2-client/: app.py  pyproject.toml
oauth2-client/controllers/: auth.py  base.py
oauth2-client/templates/: index.html
